<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <TextView
        android:id="@+id/kit_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFFF8800"
        android:gravity="center"
        android:paddingTop="35dp"
        android:text="@string/lib_floating_kit_util_log"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/kit_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/lib_floating_kit_title_text"
        android:padding="5dp"
        android:src="@drawable/lib_floating_kit_vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource" />

    <EditText
        android:id="@+id/kit_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:drawableStart="@drawable/lib_floating_kit_search_icon"
        android:hint="@string/lib_floating_kit_search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#323232"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/kit_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bebebe"
        app:layout_constraintTop_toBottomOf="@+id/kit_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kit_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kit_search" />
</androidx.constraintlayout.widget.ConstraintLayout>