<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <TextView
        android:id="@+id/kit_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFFF8800"
        android:gravity="center"
        android:paddingTop="35dp"
        android:text="@string/lib_floating_kit_util_app"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/kit_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/lib_floating_kit_title_text"
        android:padding="5dp"
        android:src="@drawable/lib_floating_kit_vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kit_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/kit_app_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_package"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kit_app_package_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_package"
                app:layout_constraintTop_toTopOf="@+id/kit_app_package" />

            <TextView
                android:id="@+id/kit_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_version"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_package_value" />

            <TextView
                android:id="@+id/kit_app_version_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_version"
                app:layout_constraintTop_toTopOf="@id/kit_app_version" />

            <TextView
                android:id="@+id/kit_app_min_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_min_version"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_version_value" />

            <TextView
                android:id="@+id/kit_app_min_version_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_min_version"
                app:layout_constraintTop_toTopOf="@id/kit_app_min_version" />

            <TextView
                android:id="@+id/kit_app_target_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_target_version"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_min_version_value" />

            <TextView
                android:id="@+id/kit_app_target_version_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_target_version"
                app:layout_constraintTop_toTopOf="@id/kit_app_target_version" />

            <TextView
                android:id="@+id/kit_app_phone_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_phone_model"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_target_version_value" />

            <TextView
                android:id="@+id/kit_app_phone_model_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_phone_model"
                app:layout_constraintTop_toTopOf="@id/kit_app_phone_model" />

            <TextView
                android:id="@+id/kit_app_system_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_system_version"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_phone_model_value" />

            <TextView
                android:id="@+id/kit_app_system_version_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_system_version"
                app:layout_constraintTop_toTopOf="@id/kit_app_system_version" />

            <TextView
                android:id="@+id/kit_app_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_resolution"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_system_version_value" />

            <TextView
                android:id="@+id/kit_app_resolution_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_resolution"
                app:layout_constraintTop_toTopOf="@id/kit_app_resolution" />

            <TextView
                android:id="@+id/kit_app_screen_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_screen_size"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_resolution_value" />

            <TextView
                android:id="@+id/kit_app_screen_size_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_screen_size"
                app:layout_constraintTop_toTopOf="@id/kit_app_screen_size" />

            <TextView
                android:id="@+id/kit_app_density"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_density"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_screen_size_value" />

            <TextView
                android:id="@+id/kit_app_density_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_density"
                app:layout_constraintTop_toTopOf="@id/kit_app_density" />

            <TextView
                android:id="@+id/kit_app_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_root"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_density_value" />

            <TextView
                android:id="@+id/kit_app_root_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_root"
                app:layout_constraintTop_toTopOf="@id/kit_app_root" />

            <TextView
                android:id="@+id/kit_app_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_ip"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_root_value" />

            <TextView
                android:id="@+id/kit_app_ip_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_ip"
                app:layout_constraintTop_toTopOf="@id/kit_app_ip" />

            <TextView
                android:id="@+id/kit_app_sign_md5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_sign_md5"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_ip_value" />

            <TextView
                android:id="@+id/kit_app_sign_md5_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_sign_md5"
                app:layout_constraintTop_toTopOf="@id/kit_app_sign_md5" />

            <TextView
                android:id="@+id/kit_app_sign_sha1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_sign_sha1"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_sign_md5_value" />

            <TextView
                android:id="@+id/kit_app_sign_sha1_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_sign_sha1"
                app:layout_constraintTop_toTopOf="@id/kit_app_sign_sha1" />

            <TextView
                android:id="@+id/kit_app_sign_sha256"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lib_floating_kit_app_sign_sha256"
                android:textColor="#323232"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kit_app_sign_sha1_value" />

            <TextView
                android:id="@+id/kit_app_sign_sha256_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="#808080"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kit_app_sign_sha256"
                app:layout_constraintTop_toTopOf="@id/kit_app_sign_sha256" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
